--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "animejs": "^2.0.2",
     "gatsby": "^1.0.1",
     "gatsby-link": "^1.0.1",
+    "gatsby-plugin-glamor": "^1.6.0",
     "gatsby-plugin-react-helmet": "^1.0.1",
     "glamor": "^2.20.38",
     "glamorous": "^4.0.0"
