pwa : favicons, offline, web manifest

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "gatsby-link": "^1.0.1",
     "gatsby-plugin-glamor": "^1.6.0",
     "gatsby-plugin-glamorous": "^1.0.1",
+    "gatsby-plugin-manifest": "^1.0.1",
+    "gatsby-plugin-offline": "^1.0.1",
     "gatsby-plugin-react-helmet": "^1.0.1",
     "glamor": "^2.20.38",
     "glamorous": "^4.0.0"
